...
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:foregroundGravity="center_vertical"
        android:paddingHorizontal="@dimen/_10dp">

        <LinearLayout
            android:id="@+id/ll_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_gravity="start|center_vertical"
            android:orientation="horizontal">
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@drawable/ic_menu" />

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="@dimen/_30dp"
                android:layout_height="@dimen/_30dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_back_arrow"
                android:visibility="gone" />
        </LinearLayout>

        <plm.patientslikeme2.utils.usercontrol.UserTextView
            android:id="@+id/toolbar_title"
            style="@style/TextViewBold16"
            android:layout_width="@dimen/_200dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:ellipsize="end"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@drawable/ic_notification" />

            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@drawable/ic_close_dark_green"
                android:visibility="gone"
                app:tint="@color/black" />
...
