...
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.main.view.activity.home.MainActivity"
    tools:openDrawer="start">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/layout_toolbar_home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/ic_success_error"
            layout="@layout/layout_success_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10dp"
            android:layout_marginTop="@dimen/_5dp"
            app:layout_constraintLeft_toLeftOf="parent"
...
