...
    <string name="text_size">Text size</string>
    <string name="adjust_text_size_dragging">Adjust the text size by dragging the\nslider or tapping +/-.</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="strong">Strong</string>
    <string name="large">Large</string>
    <string name="hidden_posts">Hidden Posts</string>
    <string name="hidden_posts_details">When you hide posts by members, you won’t see their posts in your newsfeed or on their profile page.</string>
    <string name="blocked_private_messages">Blocked Private Messages</string>
    <string name="blocked_private_messages_details">When you block private messages from a member, you won’t be able to message each other, but you can still see your private message history.</string>
    <string name="no_hidden_post">You haven’t blocked any posts</string>
    <string name="no_blocked_members">You haven’t blocked any members</string>
    <string name="no_notification">You haven’t received any notification</string>
    <string name="notification">Notification</string>
    <string name="unhide">Unhide</string>
    <string name="hide">Hide</string>
    <string name="unblock">Unblock</string>
    <string name="block">Block</string>
    <string name="change_password">Change password</string>
    <string name="currentemail_domain_com">currentemail@domain.com</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
...
